--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "gulp-jsmodule",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Gulp plugin for reconciling AMD dependency trees in JavaScript projects.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alexsaves/gulp-jsmodule.git"
   },
   "keywords": [
     "AMD",
