--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-jsmodule",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "description": "Gulp plugin for reconciling AMD dependency trees in JavaScript projects.",
   "main": "index.js",
   "scripts": {
@@ -18,8 +18,11 @@
   "author": "Alexei White <alexei.white@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.1.0",
     "ejs": "^2.3.1",
+    "gulp-util": "^3.0.5",
     "html-minifier": "^0.7.2",
+    "strftime": "^0.9.2",
     "through": "^2.3.7"
   }
 }
