--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-jsmodule",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Gulp plugin for reconciling AMD dependency trees in JavaScript projects.",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,8 @@
   "keywords": [
     "AMD",
     "gulp",
-    "jsmodule"
+    "jsmodule",
+    "gulpplugin"
   ],
   "author": "Alexei White <alexei.white@gmail.com>",
   "license": "MIT",
